# webscaff

./: .coveragerc  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
demo/: wscaff.yml
demo/conf/: django.py  env_production.py  mydemo-certbot-hook.sh  mydemo.service  postgres.conf
docs/: 02_quickstart.md  03_faq.md  Makefile  index.md
docs/source/: conf.py  faq.rst  index.rst  quickstart.rst
src/webscaff/: __init__.py  cli.py  exceptions.py  overrides.py  utils.py
src/webscaff/commands/: __init__.py  utils.py
src/webscaff/commands/run/: __init__.py  certbot.py  dj.py  fs.py  log.py  pg.py  service.py  utils.py  uwsgi.py  venv.py
src/webscaff/commands/sys/: apt.py  fs.py  pg.py  usr.py  utils.py  venv.py
tests/: cli_proxy.py  conftest.py  test_commands.py  test_module.py
tools/: devboot.sh
webscaff/: __init__.py  cli.py  overrides.py  utils.py
webscaff/commands/: __init__.py  utils.py
webscaff/commands/proj/: __init__.py  django.py  fs.py  log.py  service.py  utils.py  uwsgi.py  venv.py
webscaff/commands/run/: __init__.py  certbot.py  dj.py  fs.py  git.py  log.py  pg.py  service.py  utils.py  uwsgi.py  venv.py
webscaff/commands/sys/: apt.py  certbot.py  fs.py  git.py  pg.py  pip.py  usr.py  utils.py  venv.py
